--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
   justify-content: center;
   background: url('robot.gif');
   background-size: 70%;
-  background-position: 120% center;
+  background-position: 125% center;
   background-repeat:no-repeat
 
 }
@@ -43,11 +43,11 @@ body{
 
 button {
   cursor: pointer;
+  align-items: center;
   outline: none;
   width: 240px;
   height: 60px;
-  position: relative;
-  top: 10%;
+  margin-bottom: 40px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 18px;
   color: white;
@@ -71,32 +71,19 @@ button:disabled{
   filter: brightness(30%);
 }
 
-p {
-  position: absolute;
-  bottom: 5%;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: white;
-  text-align: center;
-  margin: 0 auto;
-  text-shadow: 2px 2px 10px;
-}
 
 label {
-  position: relative;
   outline: none;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 16px;
-  top: 13%;
   color: white;
-  text-align: center;
   margin: 0px auto;
+  margin-bottom: 6px;
   text-shadow: 2px 2px 10px;
 }
 
 select {
-  position: relative;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  top: 14%;
   color: white;
   border: none;
   font-size: 16px;
@@ -114,8 +101,15 @@ select:active{
 
 img{
   width: 20px;
+  position: relative;
+  top: 4px;
+  left: 3px;
 }
 
+.buttons-container{
+  display: grid;
+  position: relative;
+}
 
 /* Media query tablettes et smartphones */
 @media screen and (max-width: 800px) {
@@ -125,7 +119,7 @@ img{
   }  
 
   .title{
-    top: 12%;
+    top: 10%;
     font-size: 22px;
   
   }
@@ -133,6 +127,13 @@ img{
   button{
     position: relative;
     top: 15%;
+  }
+
+
+  .buttons-container{
+    display: grid;
+    position: relative;
+    top: 35%;
   }
 }
 
