--- a/style.css
+++ b/style.css
@@ -131,7 +131,8 @@ img{
 
 
   .buttons-container{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     position: relative;
     top: 35%;
   }
