--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
   justify-content: left;
   color: white;
   position: absolute;
+  top: 15%;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;;
   font-size: 26px;
   text-shadow: 2px 2px 10px;
